--- a/web/src/index.css
+++ b/web/src/index.css
@@ -85,3 +85,8 @@
   outline: none;
   border: none;
 }
+
+.login_form--submit {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
