--- a/web/src/index.css
+++ b/web/src/index.css
@@ -12,7 +12,7 @@
 
 }
 
-:root{
+:root {
   font-family: 'calibri';
   font-size: 20px;
 }
@@ -52,6 +52,7 @@
 .login_box--title {
   font-size: 24px;
   line-height: 26px;
+  margin-top: 13px;
 }
 
 .login_form--text_field {
@@ -70,13 +71,13 @@
 
 .login_form--keepon {
   margin-top: 27px;
-} 
+}
 
 .keepon--label {
   margin-left: 14px;
 }
 
-.login_form--submit{
+.login_form--submit {
   margin-top: 17px;
   background-color: #6C6EA0;
   font-size: 1rem;
@@ -89,4 +90,16 @@
 .login_form--submit {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+}
+
+.login_box--warning {
+  display: block;
+  text-align: center;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+
+  color: #FF4040;
 }
