--- a/web/src/index.css
+++ b/web/src/index.css
@@ -19,10 +19,10 @@
 
 .page_container {
   margin: auto;
+  max-width: 1200px;
 }
 
-.page_container {
-  max-width: 1200px;
+.page_container--login_page {
   display: flex;
   justify-content: center;
   align-items: center;
