--- a/web/src/index.css
+++ b/web/src/index.css
@@ -155,7 +155,7 @@
   border-color: var(--azul-escuro);
   border-style: solid;
   position: relative;
-  box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .user_card--user_image {
@@ -186,7 +186,7 @@
 }
 
 .post_listing--pagination {
-  display: flex; 
+  display: flex;
   gap: 17px;
   justify-content: center;
   margin: 13px;
@@ -206,3 +206,6 @@
 .pagination--index_selected {
   background: #6C6EA0;
 }
+
+/* Search box */
+
