--- a/web/src/index.css
+++ b/web/src/index.css
@@ -160,7 +160,8 @@
 
 .user_card--user_image {
   display: inline-block;
-  width: 60px 60px;
+  width: 65px;
+  height: 65px;
   border-radius: 50%;
   overflow: hidden;
   position: absolute;
@@ -178,8 +179,6 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  /* identical to box height */
-
 
   color: rgba(0, 0, 0, 0.5);
 
@@ -209,3 +208,21 @@
 
 /* Search box */
 
+.page_content--search_box {
+  display: block;
+  width: 179px;
+  height: 27px;
+
+  padding-left: 5px;
+  margin-top: 26px;
+
+  background: #FFFFFF;
+  border: 1px solid #000000;
+
+  font-size: 0.8rem;
+
+  outline: none;
+  border-width: 0 0 2px 0;
+  border-style: solid;
+  border-color: var(--azul-escuro);
+}
