--- a/web/src/index.css
+++ b/web/src/index.css
@@ -22,6 +22,23 @@
   max-width: 1200px;
 }
 
+.site_menu--list_of_links {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  list-style: none;
+  justify-content: center;
+  padding: 22px;
+}
+
+.list_of_links--link {
+  font-weight: 700;
+  font-size: 0.81rem;
+  line-height: 17px;
+  color: var(--black);
+  text-decoration: none;
+}
+
 .page_container--login_page {
   display: flex;
   justify-content: center;
@@ -50,7 +67,7 @@
 }
 
 .login_box--title {
-  font-size: 24px;
+  font-size: 1rem;
   line-height: 26px;
   margin-top: 13px;
 }
@@ -102,23 +119,6 @@
   /* identical to box height */
 
   color: #FF4040;
-}
-
-.site_menu--list_of_links {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  list-style: none;
-  justify-content: center;
-  padding: 22px;
-}
-
-.list_of_links--link {
-  font-weight: 700;
-  font-size: 0.81rem;
-  line-height: 17px;
-  color: var(--black);
-  text-decoration: none;
 }
 
 .page_container--random_user_page {
@@ -205,8 +205,6 @@
   background: #6C6EA0;
 }
 
-/* Search box */
-
 .page_content--search_box {
   display: block;
   width: 179px;
@@ -224,4 +222,29 @@
   border-width: 0 0 2px 0;
   border-style: solid;
   border-color: var(--azul-escuro);
+}
+
+.main_content--page_title {
+  font-size: 1rem;
+}
+
+.random_http_image--code_options {
+  display: inline-block;
+  padding: 5px;
+  border: 1px solid var(--azul-claro);
+}
+
+.random_http_image_page--http_image {
+  margin: auto;
+  margin-top: 20px;
+  display: block;
+  max-width: 800px;
+}
+
+.random_http_image_page--http_code_picker {
+  border: 1px solid var(--azul-escuro);
+}
+
+.page_conent--image_form {
+  font-size: 0.88rem;
 }
