--- a/web/src/index.css
+++ b/web/src/index.css
@@ -259,3 +259,46 @@
   margin: auto;
   margin-top: 20px;
 }
+
+
+.clients_page--modal_add_user {
+  max-width: 500px;
+
+  margin: 20px auto;
+  padding: 20px 49px;
+
+  background: #fff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.add_user_form--field {
+  display: block;
+  width: 100%;
+  height: 41px;
+
+  margin-bottom: 13px;
+  margin-top: 13px;
+  padding-left: 5px;
+
+  border-width: 1px 1px 5px 1px;
+  border-style: solid;
+  border-color: var(--azul-escuro);
+  outline: none;
+
+  font-size: 0.8rem;
+  font-weight: lighter;
+  
+}
+
+.add_user_form--submit {
+  margin-top: 17px;
+  background-color: #6C6EA0;
+  font-size: 1rem;
+  padding: 4px 24px;
+  color: #FEFFFC;
+  outline: none;
+  border: none;
+}
