--- a/web/src/index.css
+++ b/web/src/index.css
@@ -31,6 +31,12 @@
   font-size: 1rem;
 }
 
+.u-description {
+  font-weight: 400;
+  font-size: 0.81rem;
+  line-height: 17px;
+}
+
 /* End utilities */
 
 /* Site's main menu */
@@ -143,12 +149,6 @@
   padding: 0 40px;
 }
 
-.page_content--page_description {
-  font-weight: 400;
-  font-size: 0.81rem;
-  line-height: 17px;
-}
-
 .page_content--cards_listing {
   display: flex;
   flex-wrap: wrap;
@@ -164,7 +164,7 @@
   padding: 24px 0;
   margin-top: 20px;
   border-width: 0px 0px 0px 44px;
-  
+
   border-style: solid;
   position: relative;
   box-shadow: -6px 4px 5px rgba(0, 0, 0, 0.25);
@@ -262,7 +262,22 @@
 }
 
 .random_http_image_page--http_code_picker {
-  border: 1px solid var(--azul-escuro);
+  display: block;
+  width: 179px;
+  height: 27px;
+
+  padding-left: 5px;
+  margin-top: 26px;
+
+  background: #FFFFFF;
+  border: 1px solid #000000;
+
+  font-size: 0.8rem;
+
+  outline: none;
+  border-width: 0 0 2px 0;
+  border-style: solid;
+  border-color: var(--azul-escuro);
 }
 
 .page_conent--image_form {
