Added utility for page's body in a more adequate position.

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -41,6 +41,44 @@
 .u-page_body {
   padding: 0 40px;
 }
+
+.u-square_decorator {
+  margin: 0;
+  display: inline-block
+}
+
+.u-square_decorator::before {
+  content: '';
+  box-sizing: border-box;
+
+  position: absolute;
+  left: -35px;
+  top: -15px;
+
+  width: 97px;
+  height: 95px;
+
+  border-width: 5px 0px 0px 5px;
+  border-style: solid;
+  border-color: #6C6EA0;
+}
+
+.u-square_decorator::after {
+  content: '';
+  box-sizing: border-box;
+
+  position: absolute;
+  bottom: -30px;
+  right: -35px;
+  width: 97px;
+  height: 95px;
+
+  border-width: 5px 0px 0px 5px;
+  border-style: solid;
+  border-color: #6C6EA0;
+  transform: rotate(-180deg);
+}
+
 /* End utilities */
 
 /* Site's main menu */
@@ -258,7 +296,8 @@
   margin: auto;
   margin-top: 20px;
   display: block;
-  max-width: 800px;
+  max-width: 500px;
+  position: relative;
 }
 
 .random_http_image_page--http_code_picker {
