--- a/web/src/index.css
+++ b/web/src/index.css
@@ -369,4 +369,35 @@
   color: #FF4040;
 }
 
+.clients_page--add_user {
+  margin-top: 17px;
+  padding: 4px 24px;
+
+  background-color: #6C6EA0;
+
+  outline: none;
+  border: none;
+
+  font-size: 0.7rem;
+  color: #FEFFFC;
+}
+
+.clients_page--table_clients {
+  border-collapse: collapse;
+  border: 1px solid rgba(204, 204, 204, 0.5);
+
+  margin: auto;
+  margin-top: 15px;
+
+  table-layout: fixed;
+  
+  color: rgba(5, 5, 5, 0.7);
+}
+
+.clients_page--table_clients td,
+.clients_page--table_clients th {
+  padding: 5px;
+  border: 1px solid rgba(204, 204, 204, 0.5);
+}
+
 /* End clients page */
