Implemented form to update clients data and styled modals.

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -328,10 +328,11 @@
   margin: auto;
   margin-bottom: 20px;
 }
+
 /* End random dog page */
 
 /* Clients page */
-.clients_page--modal_add_user {
+.clients_page--modal {
   max-width: 500px;
 
   margin: 20px auto;
