--- a/web/src/index.css
+++ b/web/src/index.css
@@ -79,6 +79,43 @@
   text-decoration: none;
 }
 
+.site_menu--toggle_menu_button {
+  display: none;
+  cursor: pointer;
+  align-self: start;
+  right: 0px;
+  padding: 6px 6px;
+  z-index: 10;
+}
+
+.site_menu--toggle_menu_button .bar1,
+.site_menu--toggle_menu_button .bar2,
+.site_menu--toggle_menu_button .bar3 {
+  width: 25px;
+  height: 3px;
+  background-color: var(--black);
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-7px, 6px);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-6px, -7px);
+}
+
+.site_menu--list_of_links.show {
+  left: 0;
+}
+
 /* End main menu */
 
 /* Login page */
@@ -321,6 +358,7 @@
   color: #FEFFFC;
   outline: none;
   border: none;
+  cursor: pointer;
 }
 
 .main_content--image_centralizer {
@@ -372,6 +410,7 @@
   color: #FEFFFC;
   outline: none;
   border: none;
+  cursor: pointer;
 }
 
 .modal_add_user--add_user_form_warning {
@@ -396,10 +435,11 @@
 
   font-size: 0.7rem;
   color: #FEFFFC;
+  cursor: pointer;
 }
 
 .table_wrapper {
-  overflow-x:auto;
+  overflow-x: auto;
 }
 
 .clients_page--table_clients {
@@ -410,7 +450,7 @@
   margin-top: 15px;
 
   table-layout: fixed;
-  
+
   font-size: 0.8rem;
   color: rgba(5, 5, 5, 0.7);
 
@@ -464,8 +504,41 @@
 
   }
 
-  .add_user_form--submit{
+  .add_user_form--submit {
     margin-top: 13px;
     font-size: 0.8rem;
   }
+}
+
+@media only screen and (max-width: 460px) {
+  .clients_page--modal {
+    margin: 20px 20px;
+  }
+}
+
+@media only screen and (max-width: 690px) {
+  .site_menu--toggle_menu_button {
+    display: block;
+  }
+
+  .site_menu--list_of_links {
+    left: -100vw;
+
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+
+    position: fixed;
+    
+    
+    background-color: #fff;
+    transition: all 0.4s;
+    z-index: 10;
+  }
+
+
 }
