--- a/web/src/index.css
+++ b/web/src/index.css
@@ -62,6 +62,10 @@
 /* End utilities */
 
 /* Site's main menu */
+.site_menu {
+  box-shadow: 0 1px 5px rgba(150, 150, 150, 0.25);
+  margin-bottom: 10px;
+}
 .site_menu--list_of_links {
   display: flex;
   flex-direction: row;
